landing page implemntation

--- a/tailwindcss/index1.html
+++ b/tailwindcss/index1.html
@@ -98,7 +98,7 @@
                 <div class="pt-2 pb-10 text-xl w-[650px]">We provide a simple & straightforward hiring process to help you find
                     highly-skilled remote tech talent in record time.</div>
             </div>
-            <div class="flex min-w-[100%] flex-col sm:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6 view  ">
+            <div class="sm:view h-auto flex min-w-[100%] flex-col flex-wrap md:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6   ">
                 <div class="min-w-[40%] p-10" >
                     <div class="min-w-[300px] min-h-[300px] bg-white rounded-md ">
                     </div>
@@ -109,7 +109,7 @@
                         <div>Let us know your development needs, whether it's an individual developer or an entire tech team, we're here to help! A consultant will reach out to you to understand your requirements better prior to sourcing your talent.</div>
                 </div>
             </div>
-            <div class="view flex min-w-[100%] flex-col sm:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6">
+            <div class="sm:view h-auto flex min-w-[100%] flex-col md:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6 ">
                 
                 <div class="text-white text-xl p-10">
                         <div class="text-green-400 text-4xl font-bold mb-6 ">Find Your Perfect Fit</div>
@@ -121,7 +121,7 @@
                     
                 </div>
             </div>
-            <div class="view flex min-w-[100%] flex-col sm:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6">
+            <div class="sm:view  h-auto flex min-w-[100%] flex-col md:flex-row w-[500px] p-12 bg-gray-800 rounded-lg text-white mb-6 ">
                 <div class="min-w-[40%] p-10" >
                     <div class="min-w-[300px] min-h-[300px] bg-white rounded-md ">
                     </div>
