navbar menu added

--- a/tailwindcss/index11.html
+++ b/tailwindcss/index11.html
@@ -12,8 +12,7 @@
     
     
     <nav class="w-full h-auto sticky z-20 mt-2 mb-2 top-0 h-20 p-2  bg-[rgba(0,0,0,0.7)] 
-    text-white rounded-sm 
-                ">
+    text-white rounded-sm  ">
         <div class="flex p-1 flex-col-2 justify-between items-center">
             <div class="pl-6">
                 <img width="200" height="80"
