footer related implemntation

--- a/tailwindcss/dashware.html
+++ b/tailwindcss/dashware.html
@@ -98,20 +98,51 @@
     <!-- dashboard -->
     <div class="m-3 ml-6 mr-6">
         <div class="flex border-1 flex-col sm:flex-cols-4 sm:flex-row 
-            items-start sm:items-center  justify-between
-        border-gray-700 shadow-gray-600 shadow-sm">
+            items-start sm:items-center  justify-between 
+            border-gray-700 shadow-gray-600 shadow-sm">
 
-            <div class="order-1  p-2 pl-4 pr-10  bg-gray-100">
+            <div class="order-1 flex p-2 pl-6 pr-10  bg-gray-100 min-w-[100%] sm:min-w-auto">
                 <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/89ec77a1-26ea-4774-9861-3265726bd8d8.jpeg?auto=format%2Ccompress&fit=max&w=128&q=75&ch=Width%2CDPR"
                     width="80" height="80" class="inline-block" />
-                <a href="#" target="_blank" class="font-bold text-gray-800">Locker</a>
-                <span class="inline-block sm:hidden">
-                    <div>Key Features</div>
-                    <div class="inline-block p-3 pl-10 pr-10 bg-green-600">bar</div>
-                    <div class="inline-block">9/10</div>
-                </span>
+                <div>
+
+                    <span class="">
+                        <div class="p-6">
+                            <a href="#" target="_blank" class="font-bold text-gray-800">Locker</a>
+                            <div class="sm:hidden relative">
+                                <div class="inline-block">
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                                </div>
+                                <div class="inline-block">
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                                </div>
+                                <div class="inline-block">
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                                </div>
+                                <div class="inline-block">
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                                    <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                                </div>
+                                <div class="inline-block absolute w-full text-nowrap top-1 sm:top-1 pl-3">4 (273)</div>
+                            </div>
+
+                        </div>
+                    </span>
+                </div>
+
             </div>
-            <div class="order-3 sm:order-2 hidden sm:block">
+            <div class="order-3 sm:order-2 pl-6 hidden sm:block">
                 <div class="font-bold text-lg uppercase">Key Features</div>
                 <div class="inline-block relative p-[5px] pl-30 pr-20 mt-3 bg-green-500 rounded-[50px]
                         border-2 border-green-500">
@@ -120,7 +151,7 @@
                 </div>
                 <div class="inline-block">9/10</div>
             </div>
-            <div class="order-3 sm:order-3">
+            <div class="order-3 sm:order-3 pl-6">
                 <div class="p-3">
                     <div class="font-bold uppercase">Rating</div>
                     <div class="relative">
@@ -130,7 +161,19 @@
                             <div class="star border-10 w-[20px]  border-b-green-600
                             border-l-transparent  border-r-transparent border-b-transparent"></div>
                         </div>
-                           <div class="inline-block">
+                        <div class="inline-block">
+                            <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                            <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                        </div>
+                        <div class="inline-block">
+                            <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-t-transparent"></div>
+                            <div class="star border-10 w-[20px]  border-b-green-600
+                            border-l-transparent  border-r-transparent border-b-transparent"></div>
+                        </div>
+                        <div class="inline-block">
                             <div class="star border-10 w-[20px]  border-b-green-600
                             border-l-transparent  border-r-transparent border-t-transparent"></div>
                             <div class="star border-10 w-[20px]  border-b-green-600
@@ -141,22 +184,91 @@
 
                 </div>
             </div>
-            <div class="order-2 sm:order-4">
+            <div class="order-2 sm:order-4 pl-6">
                 <div class="m-3 mr-5">
                     <button class="bg-red-600 rounded-[50px]
-                     p-2 pl-10 pr-10 text-white
+                     p-2 pl-10 pr-10 text-white w-[400px]
                     cursor-pointer
                     ">VISIT WEBSITE</button>
                 </div>
+            </div>
+            <div class="-order-1 sm:hidden">
+                <div class="border-b-1 border-gray-700 mt-10  mb-10"></div>
+
             </div>
 
         </div>
 
 
     </div>
+
+
+
+
     <div>List</div>
     <div>subscrbe</div>
-    <div>Footer</div>
+
+
+
+    <!-- Footer  -->
+    <div class="w-full h-auto p-5 bg-black text-white">
+        <div>
+            <div>/ WHO WE ARE</div>
+            <div>The #1 destination for finding the right software and services</div>
+            <div>We help your organization save time, increase productivity and accelerate growth.</div>
+            <div><a>Learn More About Capterra</a></div>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4  ">
+            <div class="w-full  p-5">
+                <div class="text-white text-lg pl-3 pt-2 font-lg"><a
+                        class="hover:underline hover:cursor-pointer">Software Categories</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class="hover:underline hover:cursor-pointer">Service Categories</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg  "><a
+                        class="hover:underline hover:cursor-pointer">FAQs</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a class="hover:underline hover:cursor-pointer">Blog
+                        & Research</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class="hover:underline hover:cursor-pointer">Glossary</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a class="hover:underline hover:cursor-pointer">Write
+                        a Review</a></div>
+            </div>
+            <div class="w-full p-5">
+                <div class="text-white text-lg pl-3 pt-2 font-lg"><a class=" hover:underline hover:cursor-pointer">My
+                        Account
+                    </a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class=" hover:underline hover:cursor-pointer">About Us
+                    </a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg"><a
+                        class=" hover:underline hover:cursor-pointer">Careers
+                    </a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class=" hover:underline hover:cursor-pointer">Legal Terms</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class=" hover:underline hover:cursor-pointer">Privacy Policy</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg "><a
+                        class=" hover:underline hover:cursor-pointer">Vulnerability Disclosure Program</a></div>
+            </div>
+
+            <div class="w-full  p-5">
+                <div class="text-white text-lg pl-3 pt-2 font-lg hover:underline"><a class=" hover:cursor-pointer">FOR
+                        VENDORS</a></div>
+                <div class="text-white text-lg pl-3 pt-2 font-lg"><a class=" hover:cursor-pointer text-gray-400">VENDOR
+                        LOGIN</a></div>
+            </div>
+            <div class="w-full  p-5">
+                <div class="text-white text-lg pl-3 pt-2 font-lg ">Capterra Inc.
+                </div>
+                <div class="text-white text-lg pl-3 pt-2 font-l">1201 Wilson Blvd
+                    Arlington, VA 22209
+                    <a class="cursor-pointer">Email Us</a>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
     <script src="index1.js"></script>
 </body>
 
