navbar code added

--- a/tailwindcss/dashware.html
+++ b/tailwindcss/dashware.html
@@ -87,8 +87,12 @@
 
                 <div class="sm:p-6 relative sm:pt-2 p-2  cursor-pointer pt-10 pl-3
                     group">Software Categories
+                    <div
+                        class="absolute left-47 origin-bottom top-4 text-black text-sm group-hover:rotate-180 transition-all duration-200">
+                        <div class="border-1 border-black p-1 border-l-0 border-t-0 rotate-45"></div>
+                    </div>
                     <div class="hidden group-hover:block sm:absolute ml-2 text-black sm:w-60 bg-black sm:bg-white
-                    w-40
+                         w-40
                         text-white sm:text-black text-xs sm:text-lg
                         sm:border-1 sm:border-gray-200 sm:shadow-lg z-10">
                         <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">CRM Software</div>
@@ -100,9 +104,52 @@
                     </div>
 
                 </div>
-                <div class="pl-3 sm:p-6 sm:pt-2 cursor-pointer">Service Categories</div>
-                <div class="pl-3 sm:p-6  sm:pt-2 cursor-pointer">Guides & Research</div>
-                <div class="pl-3 sm:p-6  sm:pt-2 cursor-pointer">Who we Are</div>
+
+                <div class="group pl-3 sm:p-6 relative sm:pt-2 cursor-pointer">Service Categories
+                    <div
+                        class="absolute left-44 origin-bottom top-4 text-black text-sm group-hover:rotate-180 transition-all duration-200">
+                        <div class="border-1 border-black p-1 border-l-0 border-t-0 rotate-45"></div>
+                    </div>
+                    <div class="hidden group-hover:block sm:absolute ml-2 text-black sm:w-60 bg-black sm:bg-white
+                        w-40 text-white sm:text-black text-xs sm:text-lg
+                        sm:border-1 sm:border-gray-200 sm:shadow-lg z-10">
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Accounting Firms</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Digital Marketing Agencies</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Advertising Agencies</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">SEO Companies</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Web Design Companies</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Browse All Categories</div>
+                    </div>
+                </div>
+                <div class="relative group pl-3 sm:p-6  sm:pt-2 cursor-pointer">Guides & Research
+                   
+                    <div
+                        class="absolute left-44 origin-bottom top-4 text-black text-sm group-hover:rotate-180 transition-all duration-200">
+                        <div class="border-1 border-black p-1 border-l-0 border-t-0 rotate-45"></div>
+                    </div>
+                    <div class="hidden group-hover:block sm:absolute ml-2 text-black sm:w-60 bg-black sm:bg-white
+                        w-40 text-white sm:text-black text-xs sm:text-lg
+                        sm:border-1 sm:border-gray-200 sm:shadow-lg z-10">
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Glossary</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">Blog & Research</div>
+                    </div>
+
+                </div>
+                <div class="relative group pl-3 sm:p-6  sm:pt-2 cursor-pointer">Who we Are
+
+                    <div
+                        class="absolute left-32 origin-bottom top-4 text-black text-sm group-hover:rotate-180 transition-all duration-200">
+                        <div class="border-1 border-black p-1 border-l-0 border-t-0 rotate-45"></div>
+                    </div>
+                    <div class="hidden group-hover:block sm:absolute ml-2 text-black sm:w-60 bg-black sm:bg-white
+                        w-40 text-white sm:text-black text-xs sm:text-lg
+                        sm:border-1 sm:border-gray-200 sm:shadow-lg z-10">
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">About Us</div>
+                        <div class="sm:hover:bg-gray-100  sm:p-2 pl-4 pr-5 ">FAQs</div>
+                    </div>
+
+
+                </div>
             </div>
 
             <div class="flex flex-col sm:flex-row flex-cols-1 
