--- a/tailwindcss/index1.html
+++ b/tailwindcss/index1.html
@@ -28,6 +28,9 @@
                     </div>
             </div>
             <div class="menu  flex w-200 p-1 text-sm sm:text-md  flex-col sm:flex-row sm:flex justify-around items-center">
+                <div class="cursor-pointer" >
+                    <a href="#home">Home</a>
+                </div>
                 <div class="cursor-pointer">
                     How we works
                 </div>
@@ -38,10 +41,10 @@
                     Pricing
                 </div>
                 <div class="cursor-pointer">
-                    FAQ
-                </div>
-                <div class="cursor-pointer">
                     Blog
+                </div>
+                 <div class="cursor-pointer">
+                   <a href="#contactme"> Contact Me</a>
                 </div>
                 <div class="cursor-pointer">
                     <button class="rounded-4xl p-2 sm:p-4 text-sm sm:text-md mt-1 sm:mt-0 bg-green-500 text-white hover:cursor-pointer
@@ -71,7 +74,7 @@
     </nav>
 
     <!-- top section -->
-    <div class="pr-2 pl-2 mt-25">
+    <div class="pr-2 pl-2 mt-25" id="home">
         <!-- hire remote designers -->
         <div class="w-full h-auto  p-[100px] relative ">
             <div class="flex flex-col justify-center text-xl font-bold text-white">
@@ -1035,12 +1038,12 @@
                         <img src="https://img.freepik.com/free-vector/colorful-letter-gradient-logo-design_474888-2309.jpg?semt=ais_hybrid&w=740"
                             alt="Unicorn" width="150" height="150" class="mt-15 rounded-[50%]"/>
                     </div>
-                    <div class="mt-10">
-                        <div class="text-white font-bold text-lg pt-1">Social</div>
-                        <div class="cursor-pointer text-xl pt-1">LinkedIn</div>
-                        <div class="cursor-pointer text-xl pt-1">Twitter</div>
-                        <div class="cursor-pointer text-xl pt-1">Facebook</div>
-                        <div class="cursor-pointer text-xl pt-1">Instagram</div>
+                    <div class="mt-10" id="Contact Me">
+                        <div class="text-white font-bold text-lg pt-1">Contact Me</div>
+                        <div class="cursor-pointer text-xl pt-1"><a href="https://www.linkedin.com/in/maniram-yadav/">LinkedIn</a></div>
+                        <div class="cursor-pointer text-xl pt-1"><a href="https://github.com/maniram-yadav">Github</a></div>
+                        <div class="cursor-pointer text-xl pt-1"><a href="https://x.com/maniram_">Twitter</a></div>
+                        <div class="cursor-pointer text-xl pt-1"><a href="https://www.linkedin.com/in/maniram-yadav/">Instagram</a></div>
                     </div>
                     <div class="mt-10">
                         <div class="text-white font-bold text-lg pt-1">Resources</div>
@@ -1064,7 +1067,13 @@
                 </div>
             </div>
         </div>
+        <div class="text-white" id="contactme">
+            <div class="flex flex-row item-center justify-center pl-20">
+                <a href="" class="">Twitter</a>    
+                <a href="">Instagram</a>
+            </div>
 
+        </div>
 
         <!-- privacy policy -->
         <div class="w-full h-1 border-t-1 border-gray-800"></div>
@@ -1073,6 +1082,7 @@
             <div class="inline-block ml-2 cursor-pointer">Terms</div>
             <div class="inline-block  ml-2 cursor-pointer">Policy policy</div>
         </div>
+
     </div>
 
 
