--- a/tailwindcss/dashware.html
+++ b/tailwindcss/dashware.html
@@ -244,7 +244,7 @@
 
     <!-- dashboard -->
     <div class="m-3 ml-6 mr-6">
-        <div class="flex border-1 flex-col sm:flex-cols-4  sm:flex-row 
+        <div class="flex border-1 mt-3 flex-col sm:flex-cols-4  sm:flex-row 
             items-start sm:items-center  justify-between  gap-0
             border-gray-700 shadow-gray-600 shadow-sm">
 
@@ -330,7 +330,7 @@
 
 
 
-
+<ion-icon name="star-outline"></ion-icon>
 
     <div>
         <div class="m-3 ml-6 mr-6 mb-8 bg-cyan-100 border-1 border-gray-400 p-8">
