dashware card added

--- a/tailwindcss/dashware.html
+++ b/tailwindcss/dashware.html
@@ -271,12 +271,12 @@
     <!-- dashboard -->
      <!-- card 1 -->
 
-    <div class="m-3 mb-5 ml-6 mr-6">
-        <div class="flex border-1 mt-3 flex-col sm:flex-cols-4  sm:flex-row 
+    <div class="mb-5 ml-6 mr-6">
+        <div class="flex border-1 mt-3 flex-col sm:flex-cols-4  flex-wrap sm:flex-row 
             items-start sm:items-center  justify-between  gap-0
             border-gray-700 shadow-gray-600 shadow-sm">
 
-            <div class="order-1 flex p-0 pl-6 pr-10  bg-gray-100 min-w-[100%] sm:min-w-[auto]">
+            <div class="order-1 flex-1 flex p-0 pl-6 bg-gray-100 min-w-[100%] sm:min-w-[auto]">
                 <div>
                 <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/89ec77a1-26ea-4774-9861-3265726bd8d8.jpeg?auto=format%2Ccompress&fit=max&w=128&q=75&ch=Width%2CDPR"
                     width="80" height="80" class="inline-block" />
@@ -307,7 +307,7 @@
 
             <!-- key Features -->
 
-            <div class="order-3 sm:order-2 pl-6 pb-4 ">
+            <div class="order-3  flex-1  sm:order-2 pl-6 pb-4 ">
                 <div class="font-bold text-lg uppercase">Key Features</div>
                 <div class="inline-block relative p-[5px] pl-30 pr-20 mt-3 bg-green-500 rounded-[50px]
                         border-2 border-green-500">
@@ -320,7 +320,7 @@
 
 
             <!-- Rating -->
-            <div class="order-3 sm:order-3 pl-6 hidden sm:block">
+            <div class="order-3  flex-1  sm:order-3 pl-6 hidden sm:block">
                 <div class="p-3">
                     <div class="font-bold uppercase">Rating</div>
                     <div class="relative">
@@ -340,16 +340,16 @@
 
 
             <!-- button -->
-            <div class="order-2 sm:order-4 pl-6">
+            <div class="order-2 flex-1  sm:order-4 pl-6">
                 <div class="m-3 mr-5">
                     <button class="bg-red-600 rounded-[50px]
-                     p-2 pl-8 pr-8 text-white w-[300px]
+                     p-2 pl-6 pr-6 text-white w-[300px]
                     cursor-pointer
                     ">VISIT WEBSITE</button>
                 </div>
             </div>
-            <div class="-order-1 sm:hidden">
-                <div class="border-b-1 border-gray-700 mt-10  mb-10"></div>
+            <div class=" order-2 sm:hidden overflow-hidden">
+                <div class="border-b-1 w-[300px]   border-gray-700 pt-2 mb-2 "></div>
 
             </div>
 
@@ -362,12 +362,12 @@
 
     <!-- dcard 2 -->
          <div class="m-3 mb-5 ml-6 mr-6">
-        <div class="flex border-1 mt-3 flex-col sm:flex-cols-4  sm:flex-row 
-            items-start sm:items-center  justify-between  gap-0
+        <div class="flex border-1 mt-3 flex-col sm:flex-cols-4 flex-wrap  sm:flex-row 
+            items-start items-start sm:items-center  justify-between  gap-0
             border-gray-700 shadow-gray-600 shadow-sm">
 
-            <div class="order-1 flex p-0 pl-6 pr-10  bg-gray-100 min-w-[100%] sm:min-w-auto">
-                <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/89ec77a1-26ea-4774-9861-3265726bd8d8.jpeg?auto=format%2Ccompress&fit=max&w=128&q=75&ch=Width%2CDPR"
+            <div class="order-1 flex-1  flex p-0 pl-6   bg-gray-100 min-w-[100%] sm:min-w-auto">
+                <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/a061bfa3-2081-4498-8b94-d1fcb4448090.png?auto=format%2Ccompress&fit=max&w=128&q=75&ch=Width%2CDPR"
                     width="80" height="80" class="inline-block" />
                 <div>
 
@@ -395,7 +395,7 @@
 
             <!-- key Features -->
 
-            <div class="order-3 sm:order-2 pl-6 pb-4 ">
+            <div class="order-3 flex-1  sm:order-2 pl-6 pb-4 ">
                 <div class="font-bold text-lg uppercase">Key Features</div>
                 <div class="inline-block relative p-[5px] pl-30 pr-20 mt-3 bg-green-500 rounded-[50px]
                         border-2 border-green-500">
@@ -408,7 +408,7 @@
 
 
             <!-- Rating -->
-            <div class="order-3 sm:order-3 pl-6 hidden sm:block">
+            <div class="order-3 flex-1  sm:order-3 pl-6 hidden sm:block">
                 <div class="p-3">
                     <div class="font-bold uppercase">Rating</div>
                     <div class="relative">
@@ -428,16 +428,17 @@
 
 
             <!-- button -->
-            <div class="order-2 sm:order-4 pl-6">
+            <div class="order-2 flex-1  sm:order-4 pl-6">
                 <div class="m-3 mr-5">
                     <button class="bg-red-600 rounded-[50px]
-                     p-2 pl-8 pr-8 text-white w-[300px]
+                     p-2 pl-6 pr-6 text-white w-[300px]
                     cursor-pointer
                     ">VISIT WEBSITE</button>
                 </div>
             </div>
-            <div class="-order-1 sm:hidden">
-                <div class="border-b-1 border-gray-700 mt-10  mb-10"></div>
+           
+            <div class=" order-2 sm:hidden overflow-hidden">
+                <div class="border-b-1 w-[300px]   border-gray-700 pt-2 mb-2 "></div>
 
             </div>
 
