dashboard cad added

--- a/tailwindcss/darktheme.html
+++ b/tailwindcss/darktheme.html
@@ -2,14 +2,20 @@
     <head>
         <title>Dark Theme Demo</title>
          
-         <link rel="stylesheet" href="dashtheme.css" />
+         <link rel="stylesheet" href="darktheme.css" />
     </head>
     <body>
-        <nav>
-            <div>
-
+            <div class="nav">
+                <div>Menu1</div>
+                <div><button onclick="toggleTheme()">Toggle</button></div>
+                <div>Menu1</div>
             </div>
-        </nav>
+        
+        <div class="dashboard">
+            <div class="cards">
+                <div class="data">A</div>
+            </div>
+        </div>
         <script src="darktheme.js"></script>
     </body>
 </html>
